--- a/04_RAG_Evaluation/04_08_How_to_Create_an_Evaluation_Set.ipynb
+++ b/04_RAG_Evaluation/04_08_How_to_Create_an_Evaluation_Set.ipynb
@@ -463,6 +463,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rag_eval_set.push_to_hub(\"harpreetsahota/LI_Learning_RAG_Eval_Set\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -482,7 +491,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rag_eval_set.push_to_hub(repo_id=\"harpreetsahota/LI_Learning_RAG_Eval_Set\")"
+    "from datasets import load_dataset\n",
+    "\n",
+    "rag_eval_set = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\")"
    ]
   }
  ],
