--- a/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
@@ -650,12 +650,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "response = query_pipeline.run(eval_dataset[0]['question'])"
+    "### Run the generations on the evaluation set\n",
+    "\n",
+    "‼️ Note: This will take ~75 minutes. You don't have to run this yourself if you don't want to. Just download the dataset from my Hugging Face repo, linked below."
    ]
   },
   {
@@ -666,78 +666,17 @@
    "source": [
     "from utils import run_generations_on_eval_set\n",
     "\n",
-    "eval_dataset = run_generations_on_eval_set(eval_dataset, col_name=\"sentence_split_chunk_size_512_answer\")"
+    "eval_dataset = run_generations_on_eval_set(\n",
+    "    eval_dataset=eval_dataset, \n",
+    "    col_name=\"sentence_split_chunk_size_512_answer\",\n",
+    "    query_pipeline=query_pipeline)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 203,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['question', 'context', 'answer', 'question_groundedness_score', 'question_groundedness_score_rationale', 'sentence_split_chunk_size_512_answer'],\n",
-       "    num_rows: 174\n",
-       "})"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "eval_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7d860ff358a47b9a1eb7e396fc7555f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04496640111142978e195ffb7ba0b804",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating parquet from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/harpreetsahota/eval_sentence_split_chunk_size_512_answer/commit/297b0102aa29bea40db1e3e9059668fd51cf78a9', commit_message='Upload dataset', commit_description='', oid='297b0102aa29bea40db1e3e9059668fd51cf78a9', pr_url=None, pr_revision=None, pr_num=None)"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_dataset.push_to_hub(\"harpreetsahota/eval_sentence_split_chunk_size_512_answer\")"
+    "### How to load dataset from Hugging Face repo"
    ]
   },
   {
@@ -745,7 +684,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datasets import load_dataset\n",
+    "eval_dataset = load_dataset(\"harpreetsahota/eval_sentence_split_chunk_size_512_answer\")"
+   ]
   }
  ],
  "metadata": {
