--- a/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
@@ -103,7 +103,9 @@
     "\n",
     "eval_dataset = load_dataset(\"harpreetsahota/LI_Learning_RAG_Eval_Set\", split='train')\n",
     "\n",
-    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 4)"
+    "eval_dataset = eval_dataset.filter(lambda x: x['question_groundedness_score'] is not None and x['question_groundedness_score'] >= 4)\n",
+    "\n",
+    "smol_eval_set = eval_dataset.shuffle(seed=42).select(range(10))"
    ]
   },
   {
@@ -119,35 +121,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🔹→🔷 Small to Big Retrieval\n",
+    "# 🔹→🔷 Small to Big Retrieval ◾️ → ⬛️\n",
     "\n",
-    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/0*JDA3xJul91tItEhB.png>\n",
+    "The concept of small to big retrieval, also known as recursive retrieval, is a key part of LlamaIndex. And, in order to use this, we need to define how to efficiently retrieve relevant context from an index based on a query. That means defining a recursive retrieval strategy, post processing the nodes once they've been retrieved and synthsizing the responses. \n",
     "\n",
     "\n",
-    "The concept of small to big retrieval, also known as recursive retrieval, is a key part of LlamaIndex. \n",
-    "\n",
-    "- 🗂️ **Querying Stage**\n",
-    "\n",
-    "  - **Retriever Role**: Defines how to efficiently retrieve relevant context from an index based on a query.\n",
-    "  \n",
-    "  - **Relevancy and Efficiency**: The retrieval strategy is crucial for ensuring the relevance of the data and the efficiency of the retrieval process.\n",
-    "  \n",
-    "### Components Involved in the Retrieval Process\n",
-    "\n",
-    "- 🔄 **Recursive Retrieval Process**\n",
+    " 1) 🔄 **Recursive Retrieval**\n",
     "\n",
     "  - **Small Chunks (Child Chunks)**: Initially retrieves smaller, query-specific chunks of data.\n",
     "\n",
-    "  - **Big Chunks (Parent Chunks)**: Follows references to larger, contextual chunks related to the smaller chunks.\n",
+    "  - **Big Chunks (Parent Chunks)**: Follows references to larger, contextual chunks related to the smaller chunks. Retains context within each chunk.\n",
     "\n",
-    "- 🛠️ **Node Postprocessor**\n",
-    "\n",
-    "  - **Transformation and Filtering**: Applies transformations, filtering, or re-ranking to the retrieved nodes to enhance data quality and relevance.\n",
+    "  2) 🛠️ **Node Postprocessing:** Apply transformations, filtering, or re-ranking to the retrieved nodes to enhance data quality and relevance.\n",
     "  \n",
-    "- 📝 **Response Synthesizer**\n",
-    "\n",
-    "  - **Response Generation**: Uses the retrieved text chunks along with the user query to generate a response from a Language Learning Model (LLM).\n",
-    "\n",
+    "  3) 📝 **Response Synthesizer:** Use the retrieved text chunks along with the user query to generate a response\n",
     "\n",
     "\n",
     "## 🪟`SentenceWindowNodeParser`\n",
@@ -161,6 +148,7 @@
     "    *   Similar to `SentenceSplitter`, it first divides the document into individual sentences using a sentence tokenizer (defaults to [`PunktSentenceTokenizer`](https://www.nltk.org/api/nltk.tokenize.PunktSentenceTokenizer.html) from the `nltk` library).\n",
     "\n",
     "2. **Window Creation:**\n",
+    "\n",
     "    *   For each sentence (node), it gathers a \"window\" of surrounding sentences based on the specified `window_size`. \n",
     "\n",
     "    *   This window is stored in the node's metadata under the `window_metadata_key`.\n",
@@ -191,7 +179,7 @@
     "nodes = parser.get_nodes_from_documents(documents)\n",
     "```\n",
     "\n",
-    "### When to Use SentenceWindowNodeParser\n",
+    "### When to Use `SentenceWindowNodeParser`\n",
     "\n",
     "*   **Tasks requiring sentence-level understanding with context:** \n",
     "    *   Question answering, summarization, or sentiment analysis where the surrounding sentences provide valuable context.\n",
@@ -350,11 +338,11 @@
     "\n",
     "COLLECTION_NAME = \"words-of-the-senpai-small-to-big-sentence-window\"\n",
     "\n",
-    "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
+    "sentence_window_vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)\n",
     "\n",
-    "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
+    "sentence_window_storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "\n",
-    "index = create_index(vector_store=vector_store, storage_context=storage_context)"
+    "sentence_window_index = create_index(vector_store=vector_store, storage_context=storage_context)"
    ]
   },
   {
@@ -375,6 +363,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🛠️ Setup Query Engine"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -386,11 +381,11 @@
     "from utils import create_query_engine\n",
     "from prompts import ANSWER_GEN_PROMPT\n",
     "\n",
-    "ANSWER_GEN_PROMPT_TEMPLATE = PromptTemplate(ANSWER_GEN_PROMPT)\n",
+    "HYPE_ANSWER_GEN_PROMPT_TEMPLATE = PromptTemplate(HYPE_ANSWER_GEN_PROMPT)\n",
     "\n",
     "node_postprocessors = [MetadataReplacementPostProcessor(target_metadata_key=\"window\")]\n",
     "\n",
-    "query_engine = create_query_engine(\n",
+    "sentence_window_query_engine = create_query_engine(\n",
     "    index=index, \n",
     "    mode=\"query\",\n",
     "    response_mode=\"compact\",\n",
@@ -400,7 +395,14 @@
     "    node_postprocessors=node_postprocessors\n",
     "    )\n",
     "\n",
-    "query_engine.update_prompts({'response_synthesizer:text_qa_template':ANSWER_GEN_PROMPT_TEMPLATE})"
+    "sentence_window_query_engine.update_prompts({'response_synthesizer:text_qa_template':HYPE_ANSWER_GEN_PROMPT_TEMPLATE})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔧 Setup Query Pipeline"
    ]
   },
   {
@@ -411,9 +413,16 @@
    "source": [
     "from utils import create_query_pipeline\n",
     "\n",
-    "chain = [Settings.llm,  query_engine]\n",
+    "sentence_window_chain = [Settings.llm,  sentence_window_query_engine]\n",
     "\n",
-    "query_pipeline = create_query_pipeline(chain)"
+    "sentence_window_query_pipeline = create_query_pipeline(sentence_window_chain)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🪟🤖 Generate on Eval Set Using the Sentence Window Chunks"
    ]
   },
   {
@@ -424,9 +433,10 @@
    "source": [
     "from utils import run_generations_on_eval_set\n",
     "\n",
-    "smol_eval_set = eval_dataset.shuffle(seed=42).select(range(10))\n",
-    "\n",
-    "smol_eval_set = run_generations_on_eval_set(smol_eval_set, col_name=\"small-to-big-sentence-window-answer\")"
+    "smol_eval_set = run_generations_on_eval_set(\n",
+    "    eval_dataset=smol_eval_set, \n",
+    "    col_name=\"small-to-big-sentence-window-answer\", \n",
+    "    query_pipeline=sentence_window_query_pipeline)"
    ]
   },
   {
@@ -438,7 +448,7 @@
     "for row in smol_eval_set:\n",
     "    print(\"💬\\n\")\n",
     "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
-    "    print(f\"\"\"\"🤖 Reponse: {row[\"small-to-big-sentence-window-answer\"]}\"\"\")\n",
+    "    print(f\"\"\"\"🪟🤖 Reponse: {row[\"small-to-big-sentence-window-answer\"]}\"\"\")\n",
     "    print(\"\\n\")"
    ]
   },
@@ -479,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,44 +535,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'id_': '2fad5d84-612e-4c76-96dd-1e3f92428a1c',\n",
-       " 'embedding': None,\n",
-       " 'metadata': {'page_number': 0,\n",
-       "  'file_name': '../data/almanack_of_naval_ravikant.pdf',\n",
-       "  'title': 'The Almanack of Naval Ravikant',\n",
-       "  'author': 'Naval Ravikant'},\n",
-       " 'excluded_embed_metadata_keys': [],\n",
-       " 'excluded_llm_metadata_keys': [],\n",
-       " 'relationships': {<NodeRelationship.SOURCE: '1'>: RelatedNodeInfo(node_id='288e9089-174b-4a84-9611-90988233564f', node_type=<ObjectType.TEXT: '1'>, metadata={'page_number': 0, 'file_name': '../data/almanack_of_naval_ravikant.pdf', 'title': 'The Almanack of Naval Ravikant', 'author': 'Naval Ravikant'}, hash='b00d124eb1a97f077d33a4231c4fe920705ea86d2e44ac22c4447d7d6944668a'),\n",
-       "  <NodeRelationship.NEXT: '3'>: RelatedNodeInfo(node_id='de0a23e7-0882-465a-9b72-77eda6d5eb49', node_type=<ObjectType.TEXT: '1'>, metadata={}, hash='af5446fe224306514baf23b9a4295b77d14ca8f4365b30d20d7686a4369a9476')},\n",
-       " 'text': 'UNDERSTAND HOW WEALTH IS CREATED I like to think that if I lost all my money and you dropped me on a random street in any English-speaking country, within five or ten years Id be wealthy again because its just a skillset Ive developed that anyone can develop. Its not really about hard work. You can work in a restaurant eighty hours a week, and youre not going to get rich.',\n",
-       " 'start_char_idx': 0,\n",
-       " 'end_char_idx': 374,\n",
-       " 'text_template': '{metadata_str}\\n\\n{content}',\n",
-       " 'metadata_template': '{key}: {value}',\n",
-       " 'metadata_seperator': '\\n',\n",
-       " 'index_id': '288e9089-174b-4a84-9611-90988233564f',\n",
-       " 'obj': None}"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_nodes[0].__dict__"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 👷🏽‍♂️ 🗂️ Build the Index and Ingest to Qdrant"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,6 +575,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🛠️ Setup Query Engine for Parent Child Chunks\n",
+    "\n",
+    "We're making use of the `RecursiveRetriever` and the `RetrieverQueryEngine`.\n",
+    "\n",
+    "`RecursiveRetriever` is a separate class that is not directly associated with an index. It is uses multiple retrievers and query engines to recursively retrieve and query nodes.\n",
+    "\n",
+    "But, we can't directly use a `RecursiveRetriever` with the `index.as_retriever()` pattern we've seen before. The `index.as_retriever()` pattern is used to create a retriever from an index, and the type of retriever it creates depends on the `retriever_mode` argument you pass to it. `RecursiveRetriever` requires a dictionary of retrievers, and optionally a dictionary of query engines and a dictionary of node. There aren't required when creating a retriever using `index.as_retriever()`.\n",
+    "\n",
+    "So, we need to build the `RecursiveRetriever` and the `RetrieverQueryEngine` to accomplish this.\n",
+    "\n",
+    "  - `RecursiveRetriever` queries a graph of retrievers and query engines, following links between them to fetch relevant information for a given query. It recursively traverses the graph, deduplicates nodes, and returns the retrieved nodes along with any additional source nodes.\n",
+    "\n",
+    "  - `RetrieverQueryEngine` is a component that uses a retriever to fetch relevant documents or nodes based on a given query and then *synthesizes a response from the retrieved nodes using a `ResponseSynthesizer`*. It retrieves relevant nodes, applies postprocessing, synthesizes a response, and returns the result.\n",
+    "\n",
+    "\n",
+    "More details are below.\n",
+    "\n",
+    "#### [`RecursiveRetriever`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/retrievers/recursive_retriever.py)\n",
+    "\n",
+    "##### 🌿 Initialization\n",
+    "\n",
+    "   - Takes a root ID, retriever dict, and optional query engine & node dicts\n",
+    "\n",
+    "   - Validates root ID and checks for overlapping keys\n",
+    "\n",
+    "##### 🔄 Recursive Retrieval\n",
+    "\n",
+    "   - Starts from the root ID when `retrieve` is called with a query bundle\n",
+    "\n",
+    "   - Fetches the object (retriever, query engine, or node) for the current ID\n",
+    "\n",
+    "   - If it's a node, adds it to the list of nodes to return\n",
+    "\n",
+    "   - If it's a retriever, retrieves nodes and recursively queries them\n",
+    "\n",
+    "   - If it's a query engine, queries it and adds the response as a text node\n",
+    "\n",
+    "##### 🔗 Querying Retrieved Nodes\n",
+    "\n",
+    "   - For each retrieved IndexNode, recursively retrieves from the referenced ID\n",
+    "\n",
+    "   - For each TextNode, simply adds it to the list of nodes to return\n",
+    "\n",
+    "   - Avoids querying the same ID multiple times\n",
+    "\n",
+    "##### 🧹 Deduplication\n",
+    "\n",
+    "   - Deduplicates nodes based on their node ID\n",
+    "\n",
+    "   - Keeps the node with the highest score or the first one returned\n",
+    "\n",
+    "##### 📚 Retrieving All Nodes\n",
+    "\n",
+    "   - `retrieve_all` method retrieves all nodes, including additional source nodes\n",
+    "\n",
+    "   - Calls the recursive retrieval process and returns both retrieved and additional nodes\n",
+    "\n",
+    "\n",
+    "#### [`RetrieverQueryEngine`](https://github.com/run-llama/llama_index/blob/main/llama-index-core/llama_index/core/query_engine/retriever_query_engine.py)\n",
+    "\n",
+    "The `index.as_retriever()` pattern creates a retriever from an index. The type of retriever it creates depends on the `retriever_mode` argument you pass to it. \n",
+    "\n",
+    "So, while `index.as_retriever()` is used to create a retriever from an index, a `RetrieverQueryEngine` uses a retriever to fetch relevant nodes and a `ResponseSynthesizer` to synthesize a response.\n",
+    "\n",
+    "##### 🌿 Initialization\n",
+    "   - Takes a retriever, an optional response synthesizer, and node postprocessors\n",
+    "\n",
+    "   - Creates a default response synthesizer if not provided\n",
+    "   \n",
+    "   - Sets up callback manager for the query engine and node postprocessors\n",
+    "\n",
+    "##### 🔧 Customization\n",
+    "\n",
+    "   - Can be initialized with various arguments using the `from_args` method\n",
+    "\n",
+    "   - Allows customization of response mode, prompt templates, async usage, etc.\n",
+    "\n",
+    "##### 🔄 Retrieval\n",
+    "\n",
+    "   - Retrieves nodes using the provided retriever when `retrieve` or `aretrieve` is called\n",
+    "\n",
+    "   - Applies node postprocessors to the retrieved nodes\n",
+    "\n",
+    "   - Returns the processed nodes\n",
+    "\n",
+    "##### 🔀 Retriever Swapping\n",
+    "\n",
+    "   - Allows swapping the retriever using the `with_retriever` method\n",
+    "\n",
+    "   - Creates a new RetrieverQueryEngine instance with the new retriever\n",
+    "\n",
+    "##### 🧩 Node Postprocessing\n",
+    "   \n",
+    "   - Applies a list of node postprocessors to the retrieved nodes\n",
+    "\n",
+    "   - Postprocessors can modify or filter the nodes based on the query bundle\n",
+    "\n",
+    "##### 🎨 Response Synthesis\n",
+    "\n",
+    "   - Synthesizes a response using the response synthesizer\n",
+    "   - Takes the query bundle, retrieved nodes, and additional source nodes as input\n",
+    "   - Generates a response based on the configured response mode and templates\n",
+    "\n",
+    "##### ❓ Querying\n",
+    "\n",
+    "   - Handles a query using the `_query` or `_aquery` method\n",
+    "\n",
+    "   - Retrieves nodes, synthesizes a response, and returns the response\n",
+    "\n",
+    "   - Triggers callback events for query start and end\n",
+    "\n",
+    "##### 🏃 Async Support\n",
+    "\n",
+    "   - Provides async versions of retrieval, synthesis, and querying methods\n",
+    "\n",
+    "   - Allows for asynchronous processing of queries\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -594,42 +705,30 @@
     "from llama_index.core.query_engine import RetrieverQueryEngine\n",
     "from llama_index.core.retrievers import RecursiveRetriever\n",
     "\n",
-    "parent_child_chunk = parent_child_index.as_retriever(similarity_top_k=2)\n",
-    "\n",
-    "retriever_chunk = RecursiveRetriever(\n",
-    "    \"vector\",\n",
-    "    retriever_dict={\"vector\": parent_child_chunk},\n",
-    "    node_dict=all_nodes_dict,\n",
-    "    verbose=True,\n",
-    ")\n",
-    "\n",
-    "query_engine_chunk = RetrieverQueryEngine.from_args(retriever_chunk, llm=Settings.llm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parent_child_query_engine = create_query_engine(\n",
-    "    index=index, \n",
-    "    mode=\"query\",\n",
+    "parent_child_retriever = parent_child_index.as_retriever(\n",
     "    response_mode=\"compact\",\n",
     "    similiarty_top_k=5,\n",
     "    vector_store_query_mode=\"mmr\", \n",
     "    vector_store_kwargs={\"mmr_threshold\": 0.42},\n",
-    "    node_postprocessors=node_postprocessors\n",
     "    )\n",
     "\n",
-    "query_engine.update_prompts({'response_synthesizer:text_qa_template':ANSWER_GEN_PROMPT_TEMPLATE})"
+    "retriever_chunk = RecursiveRetriever(\n",
+    "    \"vector\",\n",
+    "    retriever_dict={\"vector\": parent_child_retriever},\n",
+    "    node_dict=all_nodes_dict,\n",
+    "    verbose=True,\n",
+    ")\n",
+    "\n",
+    "parent_child_query_engine = RetrieverQueryEngine.from_args(retriever_chunk, llm=Settings.llm)\n",
+    "\n",
+    "parent_child_query_engine.update_prompts({'response_synthesizer:text_qa_template':HYPE_ANSWER_GEN_PROMPT_TEMPLATE})"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/run-llama/llama_index/blob/aa13d47444692faa06b5753b7451b1920837b29c/llama-index-core/llama_index/core/retrievers/recursive_retriever.py#L22"
+    "### 🔧Setup Query Pipline for Parent Child Chunks"
    ]
   },
   {
@@ -637,7 +736,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from utils import create_query_pipeline\n",
+    "\n",
+    "parent_child_chain = [Settings.llm,  parent_child_query_engine]\n",
+    "\n",
+    "parent_child_query_pipeline = create_query_pipeline(parent_child_chain)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 👨‍👦🤖 Generate on Eval Set Using the Parent Child Chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smol_eval_set = run_generations_on_eval_set(\n",
+    "    eval_dataset=smol_eval_set, \n",
+    "    col_name=\"small-to-big-parent-child-answer\", \n",
+    "    query_pipeline=parent_child_query_pipeline)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for row in smol_eval_set:\n",
+    "    print(\"💬\\n\")\n",
+    "    print(f\"\"\"🙋🏽‍♂️ Question: {row[\"question\"]}\"\"\")\n",
+    "    print(f\"\"\"\"🪟🤖 Reponse: {row[\"small-to-big-sentence-window-answer\"]}\"\"\")\n",
+    "    print(f\"\"\"\"👨‍👦 🤖 Reponse: {row[\"small-to-big-parent-child-answer\"]}\"\"\")\n",
+    "    print(\"\\n\")"
+   ]
   }
  ],
  "metadata": {
