--- a/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
@@ -311,7 +311,7 @@
     "\n",
     "### How it Works\n",
     "\n",
-    "1. **Initial Splitting:**\n",
+    "1. **Initial Splitting**\n",
     "\n",
     "    *   The text is first divided into paragraphs using the specified `paragraph_separator` (defaults to triple newline characters `\"\\n\\n\\n\"`).\n",
     "\n",
@@ -319,7 +319,7 @@
     "\n",
     "    *   If these methods don't yield enough splits, it resorts to a backup regex and the default separators (`CHUNKING_REGEX = \"[^,.;。？！]+[,.;。？！]?\"`).\n",
     "\n",
-    "2. **Chunking with Sentence Awareness:**\n",
+    "2. **Chunking with Sentence Awareness**\n",
     "\n",
     "    *   The resulting splits are grouped into chunks, keeping sentences together as much as possible. \n",
     "\n",
@@ -327,7 +327,7 @@
     "\n",
     "    *   Chunk size and overlap still play a role, but sentence boundaries are given preference.\n",
     "\n",
-    "3. **Overlap Handling:**\n",
+    "3. **Overlap Handling**\n",
     "\n",
     "    *   Similar to `TokenTextSplitter`, it incorporates overlap between chunks to maintain context. \n",
     "\n",
