--- a/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
@@ -379,7 +379,7 @@
     "from llama_index.core.postprocessor import MetadataReplacementPostProcessor\n",
     "\n",
     "from utils import create_query_engine\n",
-    "from prompts import ANSWER_GEN_PROMPT\n",
+    "from prompts import HYPE_ANSWER_GEN_PROMPT\n",
     "\n",
     "HYPE_ANSWER_GEN_PROMPT_TEMPLATE = PromptTemplate(HYPE_ANSWER_GEN_PROMPT)\n",
     "\n",
@@ -506,8 +506,8 @@
     "# Initialize an empty list to store all index nodes\n",
     "all_nodes = []\n",
     "\n",
-    "# Iterate over each base node in the provided base_nodes list\n",
-    "for base_node in base_nodes:\n",
+    "# Iterate over each base node in senpai_documents\n",
+    "for base_node in senpai_documents:\n",
     "    # Process each base node with every SentenceSplitter in the list\n",
     "    for n in sub_node_parsers:\n",
     "        # Get sub-nodes by splitting the base node document into smaller parts\n",
