updates and fixes

--- a/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
@@ -251,6 +251,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `VectorStoreIndex` in LlamaIndex can be created in two ways: `from_documents` and `from_vector_store`.\n",
+    "\n",
+    "- `from_documents`: when you have a set of documents that you want to index. This method takes these documents, computes their embeddings, and stores them in the vector store. \n",
+    "\n",
+    "- `from_vector_store`: when you already have computed embeddings that are stored in an external vector store (like Qdrant). This method connects to the external vector store and uses the pre-computed embeddings for the index. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
