--- a/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OPENAI_API_KEY key: \")"
    ]
   },
   {
@@ -71,15 +71,16 @@
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
     "setup_llm(\n",
-    "    api_key=CO_API_KEY, \n",
-    "    model=\"command-r-plus\", \n",
+    "    provider=\"openai\"\n",
+    "    api_key=OPENAI_API_KEY, \n",
+    "    model=\"gpt-3.5-turbo\", \n",
     "    temperature=0.75, \n",
     "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
     "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
     "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"fastembed\")"
+    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
    ]
   },
   {
