--- a/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OPENAI_API_KEYß: \")"
    ]
   },
   {
@@ -460,15 +460,16 @@
     "COLLECTION_NAME = \"words-of-the-senpai-sentence_split_chunk_size_512\"\n",
     "\n",
     "setup_llm(\n",
-    "    api_key=CO_API_KEY, \n",
-    "    model=\"command-r-plus\", \n",
+    "    provider=\"openai\"\n",
+    "    api_key=OPENAI_API_KEY, \n",
     "    temperature=0.75, \n",
+    "    model=\"gpt-3.5-turbo\", \n",
     "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
     "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
     "    \"\"\"\n",
     "    )\n",
     "\n",
-    "setup_embed_model(provider=\"fastembed\")\n",
+    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)\n",
     "\n",
     "vector_store = setup_vector_store(QDRANT_URL, QDRANT_API_KEY, COLLECTION_NAME)"
    ]
@@ -508,7 +509,7 @@
     "\n",
     "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "\n",
-    "index = create_index(vector_store=vector_store, storage_context=storage_context)"
+    "index = create_index(from_where==\"vector_store\", vector_store=vector_store, storage_context=storage_context)"
    ]
   },
   {
