--- a/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
+    "OPENAI_API_KEY = os.environ['OPENAI_API_KEY'] or getpass(\"Enter your OPENAI_API_KEY key: \")"
    ]
   },
   {
@@ -69,11 +69,18 @@
    "source": [
     "from llama_index.core.settings import Settings\n",
     "from utils import setup_llm, setup_embed_model\n",
-    "from llama_index.llms.openai import OpenAI\n",
     "\n",
-    "Settings.llm = OpenAI(model=\"gpt-4-turbo-2024-04-09\")\n",
+    "setup_llm(\n",
+    "    provider=\"openai\"\n",
+    "    api_key=OPENAI_API_KEY, \n",
+    "    model=\"gpt-3.5-turbo\", \n",
+    "    temperature=0.75, \n",
+    "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
+    "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
+    "    \"\"\"\n",
+    "    )\n",
     "\n",
-    "setup_embed_model(provider=\"fastembed\")"
+    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
    ]
   },
   {
@@ -359,9 +366,10 @@
     "    similiarty_top_k=5,\n",
     "    vector_store_query_mode=\"mmr\", \n",
     "    vector_store_kwargs={\"mmr_threshold\": 0.42},\n",
+    "    text_qa_template=HYPE_ANSWER_GEN_PROMPT_TEMPLATE\n",
     "    )\n",
     "\n",
-    "semantic_nodes_query_engine.update_prompts({'response_synthesizer:text_qa_template':HYPE_ANSWER_GEN_PROMPT_TEMPLATE})"
+    "# semantic_nodes_query_engine.update_prompts({'response_synthesizer:text_qa_template':HYPE_ANSWER_GEN_PROMPT_TEMPLATE})"
    ]
   },
   {
@@ -388,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🪟🤖 Generate on Eval Set Using the Sentence Window Chunks"
+    "### 🧠🤖 Generate on Eval Set Using the Semantic Chunks"
    ]
   },
   {
