--- a/05_Advanced_RAG_Pre_Retrieval/05_05_Metadata_Extraction.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_05_Metadata_Extraction.ipynb
@@ -68,12 +68,19 @@
    "outputs": [],
    "source": [
     "from llama_index.core.settings import Settings\n",
-    "from llama_index.llms.openai import OpenAI\n",
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
-    "Settings.llm = OpenAI(model=\"gpt-4-turbo-2024-04-09\")\n",
+    "setup_llm(\n",
+    "    provider=\"openai\"\n",
+    "    api_key=OPENAI_API_KEY, \n",
+    "    model=\"gpt-3.5-turbo\", \n",
+    "    temperature=0.75, \n",
+    "    system_prompt=\"\"\"Use ONLY the provided context and generate a complete, coherent answer to the user's query. \n",
+    "    Your response must be grounded in the provided context and relevant to the essence of the user's query.\n",
+    "    \"\"\"\n",
+    "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\")"
+    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
    ]
   },
   {
