--- a/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_04_Semantic_Chunking.ipynb
@@ -71,7 +71,7 @@
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
     "setup_llm(\n",
-    "    provider=\"openai\"\n",
+    "    provider=\"openai\",\n",
     "    api_key=OPENAI_API_KEY, \n",
     "    model=\"gpt-3.5-turbo\", \n",
     "    temperature=0.75, \n",
@@ -196,14 +196,24 @@
     "\n",
     "### Arguments you need to know\n",
     "\n",
-    "- `embed_model`: The embedding model to use for semantic comparison. f not provided, the parser will attempt to use the OpenAIEmbedding model. If the `llama-index-embeddings-openai` package is not installed, an ImportError will be raised.\n",
+    "- `embed_model`: The embedding model to use for semantic comparison. If not provided, the parser will attempt to use the OpenAIEmbedding model. If the `llama-index-embeddings-openai` package is not installed, an ImportError will be raised.\n",
     "\n",
-    "- `buffer_size`: The number of sentences to group together when evaluating semantic similarity. Default value is 1 (each sentence is considered individually). Increasing the buffer size allows the parser to consider the context of adjacent sentences when determining semantic similarity. This can help capture more meaningful relationships between sentences.\n",
+    "- `buffer_size`: The number of sentences to group together when evaluating semantic similarity. \n",
     "\n",
-    "- `breakpoint_percentile_threshold`: The percentile of cosine dissimilarity that must be exceeded between a group of sentences and the next to form a node. A smaller value results in more nodes being generated. Default value is 95 (95th percentile). Adjusting this threshold allows you to control the granularity of the node splits. A lower value will create more nodes, while a higher value will create fewer nodes.\n",
+    "  - Default value is 1 (each sentence is considered individually). \n",
+    "  \n",
+    "  - Increasing the buffer size allows the parser to consider the context of adjacent sentences when determining semantic similarity. This can help capture more meaningful relationships between sentences.\n",
+    "\n",
+    "- `breakpoint_percentile_threshold`: The percentile of cosine dissimilarity that must be exceeded between a group of sentences and the next to form a node. \n",
+    "\n",
+    "  - A smaller value results in more nodes being generated. Default value is 95 (95th percentile). \n",
+    "\n",
+    "  - Adjusting this threshold allows you to control the granularity of the node splits. A lower value will create more nodes, while a higher value will create fewer nodes.\n",
     "\n",
     "- `sentence_splitter`: The function or callable object used to split the text into sentences. Default is `split_by_sentence_tokenizer` (again, using the `PunktSentenceTokenizer` from the `nltk` library). The choice of sentence splitter can affect how the text is divided into individual sentences, which in turn influences the node splitting process.\n",
+    "\n",
     "  - While the `sentence_splitter` is used to initially split the document into individual sentences, the actual determination of node boundaries is based on semantic similarity rather than a fixed splitting approach.\n",
+    "  \n",
     "  - `sentence_splitter` is more of a preprocessing step to prepare the document for the semantic analysis. It ensures that the parser has a consistent input format to work with (i.e., a list of sentences)."
    ]
   },
@@ -320,7 +330,7 @@
     "\n",
     "semantic_nodes_storage_context = StorageContext.from_defaults(vector_store=semantic_nodes_vector_store)\n",
     "\n",
-    "semantic_nodes_index = create_index(vector_store=semantic_nodes_vector_store, storage_context=semantic_nodes_storage_context)"
+    "semantic_nodes_index = create_index(from_where=\"vector_store\", vector_store=semantic_nodes_vector_store, storage_context=semantic_nodes_storage_context)"
    ]
   },
   {
@@ -367,9 +377,7 @@
     "    vector_store_query_mode=\"mmr\", \n",
     "    vector_store_kwargs={\"mmr_threshold\": 0.42},\n",
     "    text_qa_template=HYPE_ANSWER_GEN_PROMPT_TEMPLATE\n",
-    "    )\n",
-    "\n",
-    "# semantic_nodes_query_engine.update_prompts({'response_synthesizer:text_qa_template':HYPE_ANSWER_GEN_PROMPT_TEMPLATE})"
+    "    )"
    ]
   },
   {
@@ -410,7 +418,8 @@
     "eval_dataset = run_generations_on_eval_set(\n",
     "    eval_dataset=eval_dataset, \n",
     "    col_name=\"semantic-nodes-answer\", \n",
-    "    query_pipeline=semantic_nodes_query_pipeline)"
+    "    query_pipeline=semantic_nodes_query_pipeline,\n",
+    "    time_out=False)"
    ]
   },
   {
