--- a/05_Advanced_RAG_Pre_Retrieval/05_07_Query_Transformations.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_07_Query_Transformations.ipynb
@@ -71,9 +71,16 @@
     "from llama_index.llms.openai import OpenAI\n",
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
-    "setup_llm(provider=\"openai\", model=\"gpt-3.5-turbo\", api_key=OPENAI_API_KEY)\n",
+    "setup_llm(\n",
+    "    provider=\"openai\", \n",
+    "    model=\"gpt-3.5-turbo\", \n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )\n",
     "\n",
-    "setup_embed_model(provider=\"openai\", api_key=OPENAI_API_KEY)"
+    "setup_embed_model(\n",
+    "    provider=\"openai\", \n",
+    "    api_key=OPENAI_API_KEY\n",
+    "    )"
    ]
   },
   {
