--- a/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_02_Optimizing_Chunk_Size.ipynb
@@ -460,7 +460,7 @@
     "COLLECTION_NAME = \"words-of-the-senpai-sentence_split_chunk_size_512\"\n",
     "\n",
     "setup_llm(\n",
-    "    provider=\"openai\"\n",
+    "    provider=\"openai\",\n",
     "    api_key=OPENAI_API_KEY, \n",
     "    temperature=0.75, \n",
     "    model=\"gpt-3.5-turbo\", \n",
@@ -509,7 +509,7 @@
     "\n",
     "storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "\n",
-    "index = create_index(from_where==\"vector_store\", vector_store=vector_store, storage_context=storage_context)"
+    "index = create_index(from_where=\"vector_store\", vector_store=vector_store, storage_context=storage_context)"
    ]
   },
   {
