--- a/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_03_Small_to_Big_Retrieval.ipynb
@@ -71,7 +71,7 @@
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
     "setup_llm(\n",
-    "    provider=\"openai\"\n",
+    "    provider=\"openai\",\n",
     "    api_key=OPENAI_API_KEY, \n",
     "    model=\"gpt-3.5-turbo\", \n",
     "    temperature=0.75, \n",
@@ -342,7 +342,7 @@
     "\n",
     "sentence_window_storage_context = StorageContext.from_defaults(vector_store=vector_store)\n",
     "\n",
-    "sentence_window_index = create_index(vector_store=vector_store, storage_context=storage_context)"
+    "sentence_window_index = create_index(from_where=\"vector_store\",vector_store=vector_store, storage_context=storage_context)"
    ]
   },
   {
