--- a/05_Advanced_RAG_Pre_Retrieval/05_05_Metadata_Extraction.ipynb
+++ b/05_Advanced_RAG_Pre_Retrieval/05_05_Metadata_Extraction.ipynb
@@ -71,7 +71,7 @@
     "from utils import setup_llm, setup_embed_model\n",
     "\n",
     "setup_llm(\n",
-    "    provider=\"openai\"\n",
+    "    provider=\"openai\",\n",
     "    api_key=OPENAI_API_KEY, \n",
     "    model=\"gpt-3.5-turbo\", \n",
     "    temperature=0.75, \n",
