--- a/01_Getting_Started/01_07_Downloading_Our_Data.ipynb
+++ b/01_Getting_Started/01_07_Downloading_Our_Data.ipynb
@@ -11,6 +11,7 @@
     " - The Tao of Seneca, Volumes 1 - 3\n",
     " - Skin in the Game\n",
     " - Hackers and Painters\n",
+    " - Striking Thoughts\n",
     " \n",
     "These books are freely available online. Let's download them."
    ]
