finalizing for recording

--- a/02_Fundamental_Concepts_in_LlamaIndex/02_03_Loading_Data.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_03_Loading_Data.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 html2text"
+    "!pip install llama-index==0.10.37 html2text"
    ]
   },
   {
@@ -17,16 +17,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from getpass import getpass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CO_API_KEY = os.environ['CO_API_KEY'] or getpass(\"Enter your Cohere API key: \")"
+    "\n",
+    "from getpass import getpass\n",
+    "import nest_asyncio\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
