--- a/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_04_Indexing.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-embeddings-cohere"
+    "!pip install llama-index==0.10.37 llama-index-embeddings-cohere--0.2.0"
    ]
   },
   {
@@ -17,7 +17,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from getpass import getpass"
+    "\n",
+    "from getpass import getpass\n",
+    "import nest_asyncio\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
