--- a/02_Fundamental_Concepts_in_LlamaIndex/02_02_Using_LLMs.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_02_Using_LLMs.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture \n",
-    "!pip install llama-index==0.10.25 llama-index-llms-cohere"
+    "!pip install llama-index==0.10.37 llama-index-llms-cohere==0.2.0 "
    ]
   },
   {
@@ -17,7 +17,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from getpass import getpass"
+    "\n",
+    "from getpass import getpass\n",
+    "import nest_asyncio\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -68,7 +76,7 @@
    "source": [
     "from llama_index.llms.cohere import Cohere\n",
     "\n",
-    "llm = Cohere(model=\"command\", temperature=0.2)\n",
+    "llm = Cohere(model=\"command-r-plus\", temperature=0.2)\n",
     "\n",
     "response = llm.complete(\"Alexander the Great was a\")\n",
     "\n",
@@ -123,7 +131,7 @@
     "from llama_index.core.llms import ChatMessage\n",
     "from llama_index.llms.cohere import Cohere\n",
     "\n",
-    "llm = Cohere(model=\"command-nightly\")\n",
+    "llm = Cohere(model=\"command-r-plus\")\n",
     "\n",
     "messages = [\n",
     "    ChatMessage(role=\"system\", content=\"You're a hella punk bot from South Sacramento\"),\n",
@@ -151,7 +159,7 @@
     "from llama_index.core.llms import ChatMessage, MessageRole\n",
     "from llama_index.core import ChatPromptTemplate\n",
     "\n",
-    "llm = Cohere(model=\"command-light-nightly\")\n",
+    "llm = Cohere(model=\"command-r-plus\")\n",
     "\n",
     "chat_template = [\n",
     "    ChatMessage(role=MessageRole.SYSTEM,content=\"You always answers questions with as much detail as possible.\"),\n",
@@ -179,32 +187,9 @@
    "outputs": [],
    "source": [
     "from llama_index.llms.cohere import Cohere\n",
-    "\n",
-    "llm = Cohere(model=\"command\")\n",
-    "\n",
-    "response = llm.stream_complete(\"What happened to Alexander the Great when he arrived to Punjab?\")\n",
-    "\n",
-    "for r in response:\n",
-    "    print(r.delta, end=\"\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Streaming for Chat Models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from llama_index.llms.cohere import Cohere\n",
     "from llama_index.core.llms import ChatMessage, MessageRole\n",
     "\n",
-    "llm = Cohere(model=\"command\")\n",
+    "llm = Cohere(model=\"command-r-plus\")\n",
     "\n",
     "messages = [\n",
     "    ChatMessage(role=MessageRole.SYSTEM, content=\"You're a great historian bot.\"),\n",
@@ -232,7 +217,7 @@
    "source": [
     "from llama_index.core.chat_engine import SimpleChatEngine\n",
     "\n",
-    "llm = Cohere(model=\"command-light\")\n",
+    "llm = Cohere(model=\"command-r-plus\")\n",
     "\n",
     "chat_engine = SimpleChatEngine.from_defaults(llm=llm)\n",
     "\n",
