--- a/02_Fundamental_Concepts_in_LlamaIndex/02_05_Storing.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_05_Storing.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-embeddings-cohere llama-index-llms-cohere qdrant-client llama-index-vector-stores-qdrant "
+    "!pip install llama-index==0.10.37 llama-index-embeddings-cohere==0.1.8 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
    ]
   },
   {
@@ -17,7 +17,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from getpass import getpass"
+    "\n",
+    "from getpass import getpass\n",
+    "import nest_asyncio\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
