--- a/02_Fundamental_Concepts_in_LlamaIndex/02_06_Querying.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_06_Querying.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install llama-index==0.10.25 llama-index-embeddings-cohere llama-index-llms-cohere qdrant-client llama-index-vector-stores-qdrant "
+    "!pip install llama-index==0.10.37 llama-index-embeddings-cohere==0.1.8 llama-index-llms-cohere==0.2.0 qdrant-client==1.9.1 llama-index-vector-stores-qdrant==0.2.8 "
    ]
   },
   {
@@ -17,7 +17,15 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from getpass import getpass"
+    "\n",
+    "from getpass import getpass\n",
+    "import nest_asyncio\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -125,7 +133,7 @@
    "source": [
     "from llama_index.llms.cohere import Cohere\n",
     "\n",
-    "llm = Cohere(model=\"command-r\")\n",
+    "llm = Cohere(model=\"command-r-plus\")\n",
     "\n",
     "query_engine = index.as_query_engine(llm=llm, streaming=True)\n",
     "\n",
@@ -171,7 +179,7 @@
    "source": [
     "chat_engine = index.as_chat_engine(llm=llm)\n",
     "\n",
-    "chat_engine.chat_repl()"
+    "chat_engine.streaming_chat_repl()"
    ]
   },
   {
@@ -236,7 +244,7 @@
     "    ),\n",
     ")\n",
     "\n",
-    "chat_engine.chat_repl()"
+    "chat_engine.streaming_chat_repl()"
    ]
   },
   {
@@ -281,15 +289,6 @@
     "    response_synthesizer=response_synthsizer,\n",
     "    node_postprocessors=[similarity_processor],\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_engine.query(\"How do the authors express the theme of resilience in the face of challenges?\")"
    ]
   },
   {
