--- a/02_Fundamental_Concepts_in_LlamaIndex/02_03_Loading_Data.ipynb
+++ b/02_Fundamental_Concepts_in_LlamaIndex/02_03_Loading_Data.ipynb
@@ -58,7 +58,7 @@
     "base_url = \"https://www.gutenberg.org/cache/epub/{book_id}/pg{book_id}.txt\"\n",
     "\n",
     "# Directory to save the downloaded files\n",
-    "directory = Path(\"data\")\n",
+    "directory = Path(\"../data\")\n",
     "\n",
     "# Create the directory if it doesn't exist\n",
     "directory.mkdir(parents=True, exist_ok=True)\n",
